# RoboticsMapping

./: README.md
ias0060_loomets_vesterblom_belolipetskaja/: CMakeLists.txt  package.xml
ias0060_loomets_vesterblom_belolipetskaja/data/config/: mission.yaml
ias0060_loomets_vesterblom_belolipetskaja/data/config/rviz/: scitos.rviz
ias0060_loomets_vesterblom_belolipetskaja/launch/: scitos.launch
ias0060_loomets_vesterblom_belolipetskaja/scripts/: simple_control_v2.py
ias0060_task3/: CMakeLists.txt  package.xml
ias0060_task3/data/config/: mission.yaml
ias0060_task3/data/config/rviz/: scitos.rviz
ias0060_task3/data/urdf/: scitos.urdf.xacro
ias0060_task3/launch/: scitos.launch
ias0060_task3/scripts/: simple_control.py  simple_control_v2.py
ias0060_task4/: CMakeLists.txt  package.xml  setup.py  transform.py  transform_Diana.py  transform_task4.py
ias0060_task4/src/ias0060_task4/: transform.py
mapping/: CMakeLists.txt  package.xml
mapping/data/config/rviz/: scitos.rviz  scitos_our.rviz
mapping/data/maps/: map.pgm  old_map.yaml  very_old_map.pgm
mapping/data/maps/real_robot/: our_map.pgm  our_map.yaml
mapping/data/meshes/: Base.dae  SCITOS_inertial_properties.txt
mapping/data/urdf/: scitos.urdf.xacro
mapping/data/videos/: mapping_logodds_vs_buffer.txt
mapping/launch/: scitos.launch
mapping/scripts/: teleop_key.py
mapping/src/: mapping.py  mapping_logodds.py  visualizer.py
mapping_msgs/: CMakeLists.txt  package.xml
mapping_msgs/msg/: coordinate_msg.msg  map_msg.msg
tex/tex/: sample.bib  text.tex
utils/: CMakeLists.txt  package.xml  setup.py
utils/src/utils/: math.py  transform.py
vesterblom/: CMakeLists.txt  package.xml
vesterblom/scripts/: rosnode.py
