<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>The mapping package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nevermore@todo.todo">nevermore</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs/OccupancyGrid</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs/LaserScan</build_depend>
  <build_depend>nav_msgs/Odometry</build_depend>
  <build_depend>mapping_msgs/map_msg</build_depend>7
  <build_depend>visualization_msgs/Marker</build_depend>
  <build_depend>visualization_msgs/MarkerArray</build_depend>
  <build_depend>utils</build_depend>
<!--  <build_depend>message_generation</build_depend>-->

  <build_export_depend>nav_msgs/OccupancyGrid</build_export_depend>
  <build_export_depend>sensor_msgs/LaserScan</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>nav_msgs/Odometry</build_export_depend>
  <build_export_depend>mapping_msgs/map_msg</build_export_depend>
  <build_export_depend>visualization_msgs/Marker</build_export_depend>
  <build_export_depend>visualization_msgs/MarkerArray</build_export_depend>
  <build_export_depend>utils</build_export_depend>
<!--  <build_export_depend>message_runtime</build_export_depend>-->

  <exec_depend>nav_msgs/OccupancyGrid</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs/LaserScan</exec_depend>
  <exec_depend>nav_msgs/Odometry</exec_depend>
  <exec_depend>mapping_msgs/map_msg</exec_depend>
  <exec_depend>visualization_msgs/Marker</exec_depend>
  <exec_depend>visualization_msgs/MarkerArray</exec_depend>
  <exec_depend>utils</exec_depend>
<!--  <exec_depend>message_runtime</exec_depend>-->
  <export>

  </export>
</package>
